{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 69,
  "lineage": "b0364489-7b64-1940-a3cf-5fcc00841505",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "test-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC",
            "internal_domain_name_suffix": "plohzsr0rqkuzinmlcnejmwx0f.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "my_nic_configuration",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
                "subnet_id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/virtualNetworks/test-virtualNetwork/subnets/test-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-0D-3A-A9-FD-37",
            "name": "myNIC",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "test-resourceGroup",
            "virtual_machine_id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Compute/virtualMachines/myVM"
          },
          "dependencies": [
            "azurerm_public_ip.test-pip",
            "azurerm_subnet.test-sub",
            "azurerm_virtual_network.test-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test-sgra",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC|/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/networkSecurityGroups/test-securityGroup",
            "network_interface_id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/networkInterfaces/myNIC",
            "network_security_group_id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/networkSecurityGroups/test-securityGroup"
          },
          "dependencies": [
            "azurerm_network_interface.test-nic",
            "azurerm_network_security_group.test-sg",
            "azurerm_public_ip.test-pip",
            "azurerm_subnet.test-sub",
            "azurerm_virtual_network.test-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "test-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/networkSecurityGroups/test-securityGroup",
            "location": "westeurope",
            "name": "test-securityGroup",
            "resource_group_name": "test-resourceGroup",
            "security_rule": [
              {
                "access": "Allow",
                "description": "rules-for-developers-and-admin",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "3389",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "test-securityGroup-rule",
                "priority": 201,
                "protocol": "*",
                "source_address_prefix": "10.151.0.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "test-sgr",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "rules-for-developers-and-admin",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "3389",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/networkSecurityGroups/test-securityGroup/securityRules/test-securityGroup-rule",
            "name": "test-securityGroup-rule",
            "network_security_group_name": "test-securityGroup",
            "priority": 201,
            "protocol": "*",
            "resource_group_name": "test-resourceGroup",
            "source_address_prefix": "10.151.0.0/24",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.test-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "test-pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/publicIPAddresses/myPublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "108.143.135.51",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "myPublicIP",
            "resource_group_name": "test-resourceGroup",
            "sku": "Basic",
            "sku_tier": "Regional"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "test-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/virtualNetworks/test-virtualNetwork/subnets/test-subnet",
            "name": "test-subnet",
            "resource_group_name": "test-resourceGroup",
            "virtual_network_name": "test-virtualNetwork"
          },
          "dependencies": [
            "azurerm_virtual_network.test-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "test-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ca7cdc7a-8c3a-4c15-a1ac-589a44b2d7d5",
            "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/virtualNetworks/test-virtualNetwork",
            "location": "westeurope",
            "name": "test-virtualNetwork",
            "resource_group_name": "test-resourceGroup",
            "subnet": [
              {
                "address_prefix": "10.0.2.0/24",
                "id": "/subscriptions/dcca95aa-3a90-428e-926e-700e219e52f4/resourceGroups/test-resourceGroup/providers/Microsoft.Network/virtualNetworks/test-virtualNetwork/subnets/test-subnet",
                "name": "test-subnet"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}